[package]
name = "saper"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.10.1", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.18.3"
#cargo-watch = "8.4.0"
rand = "0.8.5"
bevy_despawn_with = "0.15.0"