[package]
name = "saper"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.10.1"}
bevy-inspector-egui = "0.18.3"
#cargo-watch = "8.4.0"
rand = "0.8.5"
bevy_despawn_with = "0.15.0"
image = "0.24.6"
bevy_asset_loader = "0.16.0"
wasm-bindgen = "0.2.87"
